# nested-poetry-example

./: README.md  minus-p-ignored.sh  pyproject.toml  reproduce_problem.sh  workaround.sh
sub/: pyproject.toml
